crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_top_basic.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | top 10 host\")"
---
WITH _s0 AS (
  SELECT "host", COUNT(*) AS "count"
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
  GROUP BY "host"
)
SELECT *
FROM "_s0"
ORDER BY "count" DESC
LIMIT 10
