crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_top_with_by.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | top 5 uri by host\")"
---
WITH _s0 AS (
  SELECT "uri", "host", COUNT(*) AS "count"
  FROM read_parquet('/data/**/*.parquet')
  GROUP BY "uri", "host"
)
SELECT *
FROM "_s0"
ORDER BY "count" DESC
LIMIT 5
