crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_bare_text.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"error\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet')
WHERE "message" ILIKE ?
---
params:
  0: '%error%'
