crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_comparison_gt.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"status:>400\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet')
WHERE "status" > ?
---
params:
  0: 400
