crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_comparison_ne.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"status:!=200\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE ("status" != ? OR "status" IS NULL)
---
params:
  0: 200
