crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_glob.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"path:glob:/api/*\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "path" GLOB ?
---
params:
  0: 'glob:/api/*'
