crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__search_kitchen_sink.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"service:nginx level:error last:2h \"connection refused\" -debug\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet')
WHERE "service" = ? AND "level" = ? AND "timestamp" >= now() - INTERVAL '2 hours' AND "message" ILIKE ? AND "message" NOT ILIKE ?
---
params:
  0: 'nginx'
  1: 'error'
  2: '%connection refused%'
  3: '%debug%'
